--- a/list.html
+++ b/list.html
@@ -60,8 +60,8 @@
         <div class="space-y-6" ng-if="vm.length">
             <section ng-repeat="gr in vm | orderBy:'sortOrder' track by gr.__key" class="bg-card/60 border border-border rounded-2xl shadow-glass overflow-hidden">
                 <div class="flex items-center gap-3 p-4">
-                    <div class="h-12 w-12 rounded-xl flex-shrink-0 overflow-hidden border border-border p-1 bg-black/30">
-                        <img class="h-10 w-10 object-contain" ng-src="{{gr.logo.replace('https://raw.githubusercontent.com/tchiphuong/miscmisc/refs/heads/master/', '') || fallbackLogo(gr.name)}}" alt="{{gr.name}}" on-error-fallback />
+                    <div class="h-16 w-16 rounded-xl flex-shrink-0 overflow-hidden border border-border p-1 bg-black/30">
+                        <img class="h-full w-full object-contain" ng-src="{{gr.logo.replace('https://raw.githubusercontent.com/tchiphuong/miscmisc/refs/heads/master/', '') || fallbackLogo(gr.name)}}" alt="{{gr.name}}" on-error-fallback />
                     </div>
                     <div class="min-w-0">
                         <div class="font-semibold text-base">{{gr.name || 'Unknown'}}</div>
@@ -70,8 +70,8 @@
                 </div>
                 <div class="grid gap-3 p-4 pt-0 sm:grid-cols-2 md:grid-cols-3">
                     <article ng-repeat="ch in gr.channels track by ch.id" class="group rounded-2xl border border-border bg-[#0f1216] hover:bg-[#12161b] transition shadow-glass p-3 flex gap-3">
-                        <div class="h-16 w-16 rounded-xl flex-shrink-0 overflow-hidden border border-border p-1 bg-black/30">
-                            <img class="h-14 w-14 object-contain" ng-src="{{ch.logo.replace('https://raw.githubusercontent.com/tchiphuong/miscmisc/refs/heads/master/', '') || fallbackLogo(ch.name)}}" alt="{{ch.name}}" on-error-fallback />
+                        <div class="h-24 w-24 rounded-xl flex-shrink-0 overflow-hidden border border-border p-2 bg-black/30">
+                            <img class="h-full w-full object-contain" ng-src="{{ch.logo.replace('https://raw.githubusercontent.com/tchiphuong/miscmisc/refs/heads/master/', '') || fallbackLogo(ch.name)}}" alt="{{ch.name}}" on-error-fallback />
                         </div>
                         <div class="min-w-0 flex-1">
                             <div class="font-semibold truncate" title="{{ch.name}}">{{ch.name}}</div>
